--- a/params.yaml
+++ b/params.yaml
@@ -1,8 +1,8 @@
 AUGMENTATION: True
-IMAGE_SIZE: [224,224,3] #as VGG16 model size
+IMAGE_SIZE: [299, 299, 3] #as INCEPTIONV3 model size
 BATCH_SIZE: 16
 INCLUDED_TOP: False
-EPOCHS: 1
+EPOCHS: 20
 CLASSES: 30
 WEIGHTS: imagenet
 LEARNING_RATE: 0.01
